# filmfinder

./: .gitignore  README.md  app.py  pyproject.toml
models/: MovieRecommender.py
